...
                                android:paddingBottom="@dimen/activity_horizontal_margin"
                                android:text="@string/action_eat_next" />
                    </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/fragment_outline_cardview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
...
